Thu Nov 10 12:23:43 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/TemplateParser.pm:

          When checking for duplicate source files in duplicate_index(),
          always use lowercase (since this is currently only used on
          Windows).

Thu Nov 10 09:01:25 2005  Chad Elliott  <elliott_c@ociweb.com>

        * templates/automake.mpd:
        * templates/bmake.mpd:
        * templates/em3.mpd:
        * templates/ghs.mpd:
        * templates/html.mpd:
        * templates/make.mpd:
        * templates/nmake.mpd:
        * templates/sle.mpd:
        * templates/vc6.mpd:
        * templates/vc7.mpd:
        * templates/vc7csharp.mpd:
        * templates/vc7vb.mpd:
        * templates/vc8.mpd:

          Added a template variable, libname_prefix, that can be set to
          prefix all library names (sharedname, staticname and libs).  Note
          that lit_libs and pure_libs are not affected.

Mon Nov  7 10:15:31 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Fixed a bug where a given custom input file does not match the
          custom defined input extensions and no source files are
          given, the generated source file name would still have the input
          file extension in the name (with an escaped period).

Mon Nov  7 13:59:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/boost_prg_exec_monitor.mpb:
        * config/boost_test_exec_monitor.mpb:
        * config/boost_unit_test_framework.mpb:
          Added borland

Fri Oct 28 14:58:59 2005  William Otte  <wotte@dre.vanderbilt.edu>

        * config/global.features
        * config/xerces.mpb

        Added a xerces feature to the xerces base project, similar to
        boost/zlib/zzip to allow disabling xerces specific projects.

Fri Oct 28 11:43:52 2005  Chad Elliott  <elliott_c@ociweb.com>

        * config/swig_perl.mpb:

          Added $(PERL5_INCLUDE) to the 'libpaths' as well as the 'includes'.
