@@ -1,3 +1,12 @@
+Mon Nov 14 07:40:19 2005  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/WorkspaceCreator.pm:
+
+          Fixed a bug where sorting the projects (with a circular
+          dependency) would run infinitely.  This was identical to the
+          problem fixed on Thu Apr 15 13:16:03 2004 just in a different
+          scenario.
+
 Thu Nov 10 12:23:43 2005  Chad Elliott  <elliott_c@ociweb.com>
 
         * modules/TemplateParser.pm:
